@@ -1,2 +1,20 @@
-SUBDIRS = lib demo man
+# Library lmfit:
+#   Levenberg-Marquardt least squares fitting
+# 
+# File Makefile.am:
+#   Input for the build process using GNU autotools.
+# 
+# Copyright:
+#   (C) 2013 Joachim Wuttke, Forschungszentrum Jülich GmbH
+# 
+# Licence:
+#   FreeBSD. See ../COPYING.
+# 
+# Website:
+#   http://apps.jcns.fz-juelich.de/lmfit
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = lmfit.pc
+
+SUBDIRS = lib man demo
 ACLOCAL_AMFLAGS = -I m4
