@@ -1,0 +1,10 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: lmfit
+Description: Levenberg-Marquardt mean-squares minimization and curve fitting
+Version: @PACKAGE_VERSION@
+Libs: -L${libdir} -llmfit
+Cflags: -I${includedir}
